# template-web-app

./: Cargo.toml
crates/app/: Cargo.toml
crates/app/src/: args.rs  banner.rs  lib.rs
crates/db/: Cargo.toml
crates/db/migrations/sqlite/: 20251126101730_init.sql
crates/db/src/: db.rs  error.rs  filters.rs  lib.rs  storage.rs
crates/db/src/db/: any_impl.rs  sqlite_impl.rs
crates/db/src/db/any_impl/: user_storage.rs
crates/db/src/db/sqlite_impl/: user_storage.rs
crates/db/src/storage/: sqlite_impl.rs
crates/db/src/storage/sqlite_impl/: user_storage.rs
crates/service/: Cargo.toml
crates/service/src/: error.rs  lib.rs  preprocess.rs  service_ext.rs
crates/service/src/preprocess/: user.rs
crates/service/src/service_ext/: user_ext.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  error.rs
crates/shared/src/config/: default_functions.rs
crates/sys-core/: Cargo.toml
crates/sys-core/src/: models.rs
crates/sys-core/src/models/: user.rs
crates/web/: Cargo.toml
crates/web/src/: api.rs  app_state.rs  jwt.rs  lib.rs
crates/web/src/api/: api_result.rs  login_auth.rs
crates/web/src/models/: current_user.rs
crates/worker/: Cargo.toml
crates/worker/src/: error.rs  lib.rs  worker.rs
