[package]
name = "template-web-app"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[dependencies]
app = { path = "crates/app" }

[workspace.dependencies]
# Core
shared = { path = "crates/shared" }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.89"
futures = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Log
tracing = "0.1"

# Serialize/Deserialize
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["serde", "fast-rng", "v7"] }
