[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
sys-core = { workspace = true }
db = { path = "../db" }
service = { path = "../service" }
worker = { path = "../worker" }
web = { path = "../web" }

clap = { version = "4.5.51", features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
