[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
sys-core = { workspace = true }
tokio = { workspace = true }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "uuid",
] }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
