[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = [
    "derive",
    "chrono",
    "rust_decimal",
] }
chrono = { workspace = true }
rust_decimal = "1.39"
toml = { workspace = true }
uuid = { workspace = true }
